# icda

./: Cargo.toml  Dockerfile  Makefile  README.md  dfx.json  entrypoint.sh  icda_backend.did  package-lock.json  package.json
src/icda_backend/: Cargo.toml  icda_backend.did
src/icda_backend/src/: lib.rs
src/icda_frontend/: package.json  vite.config.js
src/icda_frontend/src/: App.js
