[package]
name = "icda_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
sha2 = "0.10.8"
serde_cbor = "0.11.2"
serde = "1.0"
hex = "0.4.3"
ic-certified-map="0.4.0"